# Lecoo-Control-Center

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  README_RU.md
.github/workflows/: release.yml  rust.yml
branding/screenshots/: README.md
daemon/src/: main.rs
daemon/src/ec/: mod.rs
daemon/src/ec/hw/: led.rs
daemon/src/services/: win_service.rs
docs/: server-side-curve-rfc.md
docs/superpowers/plans/: 2026-05-22-lecoo-gui.md
docs/superpowers/specs/: 2026-05-22-lecoo-gui-design.md
gui/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/scripts/: check-i18n.mjs  make-icon.mjs
gui/src/: curve.rs  curve_runner.rs  diagnostics.rs  ipc_client.rs  lib.rs  logging.rs  main.rs  poller.rs  power_status.rs  state.rs  tauri_cmds.rs  tray.rs  updates.rs
gui/src-ui/: App.tsx
gui/src-ui/components/: Card.tsx  DaemonOverlay.tsx  ErrorBoundary.tsx  FanCurveEditor.helpers.ts  FanCurveEditor.test.ts  FanCurveEditor.tsx  PagePlaceholder.tsx  ProfileSwitcher.tsx  Segment.tsx  Sidebar.tsx  Slider.tsx  StatTile.tsx  TempChart.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Titlebar.tsx  Toggle.tsx
gui/src-ui/hooks/: useAppVersion.ts  useTelemetrySubscription.ts
gui/src-ui/i18n/: en.json  index.ts  ru.json  zh.json
gui/src-ui/pages/: Battery.tsx  Fans.tsx  Keyboard.tsx  LedRing.tsx  Overview.tsx  Power.tsx  Settings.tsx
gui/src-ui/pages/fans/: presets.ts
gui/src-ui/pages/led/: presets.ts
gui/src-ui/stores/: settings.ts  telemetry.ts  theme.ts
gui/src-ui/styles/: index.css
gui/wix/: daemon-service.wxs
