[package]
name = "gui"
# The GUI is a separate product from the upstream daemon/CLI, so we version
# it independently. Keep this in sync with gui/tauri.conf.json — that's the
# user-facing string baked into the MSI and read at runtime via getVersion().
version = "0.1.5"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[lib]
name = "lecoo_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
bincode = "2.0"
ipc = { path = "../ipc" }
ureq = { version = "3", features = ["json"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
